Setup test module